重构与优化代码，移除未使用的类和无效代码，改进配置处理逻辑，增强异常处理机制。